# swagger2ts-source

./: .gitignore  Cargo.toml  index.d.ts  trans_config.json
example/: openapi.json  swagger.json
src/: json_struct.rs  lib.rs  main.rs  openapi.rs  schemas.rs  swagger.rs
src/openapi/: mod.rs
src/swagger/: mod.rs
src/utils/: mod.rs
test/: index.d.ts  openapi.d.ts
