[package]
name = "swagger2ts"
version = "0.1.0"
edition = "2021"
authors = ["denganjia denganjia111@gmail.com"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.96"
tokio = {version="1.28.1",features =["full"]}
openssl = {version = "0.10",features=["vendored"]}
serde = {version="1.0.163",features=["derive"]}
strum_macros = "0.24.3"
strum = "0.24.1"
regex = "1.8.1"
clap = { version = "4.2.7", features = ["derive"] }

[build]
target = "i686-pc-windows-gnu"

[target.i686-pc-windows-gnu]
linker = "/usr/bin/i686-w64-mingw32-gcc"
rustflags = "-C panic=abort"

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"